--- a/src/index.css
+++ b/src/index.css
@@ -210,6 +210,21 @@ header {
   font-size: 16px;
   transition: all .3s ease;
 }
+.btn-crear {
+	border: none;
+	background-color: #000;
+	color: #fff;
+	padding: 15px 0;
+	display: block;
+	width: 100%;
+	margin-top: 10px;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	font-family: inherit;
+	cursor: pointer;
+  font-size: 16px;
+  transition: all .3s ease;
+}
 
 .btn-clear-all:hover{
   background-color: #333;
