--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ img {
 	max-width: 100%;
 }
 
-/* Header */
+
 header {
 	display: flex;
 	justify-content: space-between;
@@ -231,3 +231,113 @@ header {
   transform: scale(1.03);
   border-radius: 0;
 }
+.routines-container {
+	margin-top: 40px;
+  }
+  
+  .routine-card {
+	border: 1px solid #ccc;
+	border-radius: 10px;
+	padding: 20px;
+	margin-bottom: 20px;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+  .routine-card h3 {
+	font-size: 24px;
+	margin-bottom: 10px;
+  }
+  
+  .routine-card ul {
+	list-style: none;
+	padding: 0;
+  }
+  
+  .routine-card li {
+	margin-bottom: 5px;
+  }
+  
+  .routine-card p {
+	margin-top: 10px;
+	font-weight: 700;
+  }
+  .container {
+	text-align: center;
+  }
+  
+  .search-bar {
+	margin-bottom: 20px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+  }
+  
+  .search-bar input {
+	padding: 10px;
+	border-radius: 5px;
+	border: 1px solid #ccc;
+  }
+  
+  .container-items {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 20px;
+  }
+  
+  .item {
+	border-radius: 10px;
+  }
+  
+  .item:hover {
+	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  }
+  
+  .item img {
+	width: 100%;
+	height: 300px;
+	object-fit: cover;
+	border-radius: 10px 10px 0 0;
+	transition: all 0.5s;
+  }
+  
+  .item figure {
+	overflow: hidden;
+  }
+  
+  .item:hover img {
+	transform: scale(1.2);
+  }
+  
+  .info-product {
+	padding: 15px 30px;
+	line-height: 2;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+	position: relative;
+  }
+  
+  .price {
+	font-size: 18px;
+	font-weight: 900;
+  }
+  
+  .info-product button {
+	border: none;
+	background: none;
+	background-color: #000;
+	color: #fff;
+	padding: 15px 10px;
+	cursor: pointer;
+  }
+  
+  .remove-button {
+	border: none;
+	background: none;
+	color: red;
+	font-size: 20px;
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	cursor: pointer;
+  }
